clusters/homelab/environments/development/apps/dashboard/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: dashboard-development
  namespace: development
  annotations:
    kubernetes.io/ingress.class: traefik-private
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`dashboard.development.flowerhead.dev`)
      kind: Rule
      services:
        - name: dashboard-homepage
          port: 3000
  tls:
    secretName: development-tls
